Update haproxy config to provide better balance

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,7 +1,9 @@
 defaults
-  timeout connect 10000ms
-  timeout client 120000ms
-  timeout server 120000ms
+  timeout connect 5s
+  timeout client  6s
+  timeout server  6s
+  balance roundrobin
+
 
 listen galera
   bind *:2379
