--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,13 +1,13 @@
 defaults
-  timeout connect 5s
-  timeout client  6s
-  timeout server  6s
-  balance roundrobin
-
+  timeout connect 2s
+  timeout client  3s
+  timeout server  3s
 
 listen galera
   bind *:2379
+  option tcp-check
+  balance roundrobin
   mode tcp
-    server etcd1 etcd1:2379 check
-    server etcd2 etcd2:2379 check
-    server etcd3 etcd3:2379 check
+    server etcd1 etcd1:2379 check fall 2 rise 1
+    server etcd2 etcd2:2379 check fall 2 rise 1
+    server etcd3 etcd3:2379 check fall 2 rise 1
