--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -4,7 +4,6 @@ defaults
   timeout server  3s
 
 resolvers docker
-    # nameserver dnsmasq 127.0.0.1:53
     nameserver dns 127.0.0.1:53
 
 listen galera
@@ -12,6 +11,6 @@ listen galera
   option tcp-check
   balance roundrobin
   mode tcp
-    server etcd1 etcd1:2379 check fall 2 rise 1 init-addr none resolvers docker
-    server etcd2 etcd2:2379 check fall 2 rise 1 init-addr none resolvers docker
-    server etcd3 etcd3:2379 check fall 2 rise 1 init-addr none resolvers docker
+    server etcd1 etcd1:2379 check fall 2 rise 1 init-addr libc,none resolvers docker
+    server etcd2 etcd2:2379 check fall 2 rise 1 init-addr libc,none resolvers docker
+    server etcd3 etcd3:2379 check fall 2 rise 1 init-addr libc,none resolvers docker
