--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -3,11 +3,14 @@ defaults
   timeout client  3s
   timeout server  3s
 
+resolvers docker
+    nameserver dns 127.0.0.11:53
+
 listen galera
   bind *:2379
   option tcp-check
   balance roundrobin
   mode tcp
-    server etcd1 etcd1:2379 check fall 2 rise 1 init-addr libc,none
-    server etcd2 etcd2:2379 check fall 2 rise 1 init-addr libc,none
-    server etcd3 etcd3:2379 check fall 2 rise 1 init-addr libc,none
+    server etcd1 etcd1:2379 check fall 2 rise 1 init-addr none resolvers docker
+    server etcd2 etcd2:2379 check fall 2 rise 1 init-addr none resolvers docker
+    server etcd3 etcd3:2379 check fall 2 rise 1 init-addr none resolvers docker
